data/derived/comb/progs/unify/prog2961.ml.out
Characters 32-59:
  let stringOfList f l = sepConcat(";", List.map(fun c -> l));;
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
